--- a/css/style_about.css
+++ b/css/style_about.css
@@ -19,18 +19,17 @@
     border-bottom: cyan 3px solid;
 }
 /* ----------- NAV-BAR ----------- */
-nav{
-    float:right;
-    margin-top: 15px;
+.navbar a {
+    font-size: 3rem;
 }
-nav li {
-    margin: 10px;
-}
-nav ul {
+.navbar ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-top: 20px;
+    margin-right: 40px;
+    /* outline: auto; */
 }
 header a{
     color:#ffffff;
@@ -45,7 +44,7 @@ header a{
     font-style: italic;
     padding-right: 20px;
     margin: 5px;
-    position: relative;
+    /* position: relative; */
     left: 17px;
 }
 h2{
@@ -125,11 +124,11 @@ a {
     font-size: 24px;
 }
 /* -------------- FOOTER -------------- */
-.container-fluid {
+.footer-container {
     display: flex;
     justify-content: space-evenly;
     outline: solid 2px cyan;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     width: 100%;
     background-color: black;
@@ -139,6 +138,7 @@ a {
 }
 .col-sm-4 {
     display: inline;
+    
 }
 .social-links {
     display: flex;
@@ -168,119 +168,126 @@ a {
     color: black;
 }
 
+
 /* RESPONSIVENESS: MEDIA QUERIES */
- @media (max-width: 768px){
-   body {
-    float: none;
-    margin: 0;
-    padding: 0;
-   }
-    #branding
+
+ /* IPHONE SE & XR, GOOGLE PIXEL 5 (1080px) */
+ @media screen and (min-width: 320px) and (max-width: 359px){
+    body {background-color: green; }
+    .p1 {display:flex; font-size: 24px;}
+    .p2, .p3, .p4, .p5, .p6, .p7 {display:none;}
+}
+
+/* SAMSUNG GALAXY S20 (360px) */
+@media screen and (min-width: 360px) and (max-width: 480px) 
 {
-    margin-top:5px;
-    padding: 0;
-    height: 70px;
-    display: flex;
-}
-.container {
-
-    height: 150px;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: black;
-}
-nav ul,
-nav li {
-    margin: 0;
-    padding: 0;
-    top: 90px;
-}
-ul {
-    position: relative;
-    top: 100px;
-    right: 300px;
-    margin: 0;
-    padding: 0;
-}
-nav {
-    display: flex;
-    justify-content: space-evenly;
-    height: 50px;
-    margin: 0;
-    padding:0 ;
-}
-
-header {
-    margin: 0;
-    padding: 0;
-    float: none;
-}
-.container a {
-    display:flex;
-    font-size:30px;
-}
-
-h1 {
-    position: relative;
-    left: 40px;
-   font-style:unset;
-    margin: 0;
-    padding: 0;
-}
-h2 {
-    display: inline;
-    font-size: 20px;
+    body {background-color: blue; }
+    .p2 {display:flex; font-size: 24px;}
+    .p1, .p3, .p4, .p5, .p6, .p7 {display:none;}
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+    #branding a {
+        margin: 0;
+        padding: 0;
+        font-size: 5rem;
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 150px;
+        
+    }
+    .navbar {
+        margin: 0;
+        padding: 0;  
+        position: relative;
+        left: 5px;
+        
+    }
+    .navbar a {
+        margin: 0;
+        position: relative;
+        bottom: 27px;
+        font-size: 2rem;
+        
+    }
+    .landing-video {
+        transform: translateX(-30%) translateY(-35%);
     
+        
+    }
+    .landing-overlay {
+        background:rgb(44, 240, 240);
+        mix-blend-mode: color-burn;
+    }
+    .landing-text h2 {
+        margin: 0;
+        padding: 0; 
+        font-size: 2rem;
+        text-align: center;
+        /* display:none; */
+    }
+    .newsletter {
+        display:flex;
+        width: 100%;
+    }
+    .newsletter h3{
+        font-size: 1.8rem;
+        text-align: center;
+    }
+    .newsletter button {
+        width: 100%;
+        font-size: 1.5rem;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 195px;
+        width: 100%;
+    }
+    .social-links li a i { 
+        width: 50px;
+        height: 42px;
+        font-size: 1.8rem;
+        line-height: 0.4rem;  
 }
-h3 {
-    font-size: 24px;
-    padding: 0;
-    margin: 0;
-}
-p {
-    font-size: 12px;
-}
-.text {
-    display: flex;
-    justify-content: center;
-    margin: 0;
 }
 
-/* FOOTER - RESPONSIVENESS */
-.container-fluid{
-    position: relative;
-    top: 500px;
-    height: 100px;
-    width: 100%;
-    border: solid 2px cyan;
-    outline: none;
+/* MOBILE DEVICES [0 < 481] */
+@media screen and (min-width: 481px) and (max-width: 566px){
+    body {background-color: purple; }
+    .p3 {display:flex; font-size: 24px;}
+    .p1, .p2, .p4, .p5, .p6, .p7 {display:none;}
+
 }
-#footer-details {
-    display: inline;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    border: none;
+
+/* IPADS & TABLETS [481 < 768] */
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    body {background-color: brown; }
+    .p4 {display:flex; font-size: 24px;}
+    .p1, .p2, .p3, .p5, .p6, .p7 {display:none;}
 }
-.col-sm-4 {
-    position: relative;
-    top: -90px;
-    left: 300px;
+
+/* LAPTOPS - Smaller screens [769 < 991] */
+@media screen and (min-width: 768px) and (max-width: 991px){
+    body {background-color:  red; }
+    .p5 {display:flex; font-size: 24px;}
+    .p1, .p2, .p3, .p4, .p6, .p7 {display:none;}
 }
-.list-inline {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
+/* Dell XPS 13 (1080px) */
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+    body {background-color: orange; }
+    .p6 {display:flex; font-size: 24px;}
+    .p1, .p2, .p3, .p4, .p5, .p7 {display:none;}
 }
-.social-links li a i {
-    font-size: 48px;
-    width: 64px;
-    height: 64px;
-    padding: 24px 0;
-    margin: 0 5px;
-    line-height: 16px;
-    text-align:center;
-}
-}
+
