--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,17 @@
 /* Global */
 *{
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding:0;
 }
-
+body, html {
+    /* overflow-x:hidden; */
+}
 body {
     background-color: rgb(87, 80, 80);
     font-family: 'Rajdhani', sans-serif;
     color: white;
+    width: 100%;
 }
 .header-container{
     display:flex;
@@ -23,6 +26,7 @@ body {
 }
 
 .landing-video{ 
+    display:none;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -38,6 +42,7 @@ body {
     background-position: center;
 }
 .landing-overlay {
+    display:none;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -54,6 +59,7 @@ body {
     background: #03a9f4;
     mix-blend-mode: overlay;
 }
+
 /* ----------- NAV-BAR ----------- */
 .navbar a {
     font-size: 3rem;
@@ -64,25 +70,19 @@ body {
     margin: 0;
     padding: 0;
     margin-top: 20px;
-    margin-right: 40px;
+    
     /* outline: auto; */
 }
 header a{
     color:#ffffff;
     text-decoration: none;
-    text-transform: uppercase;
     font-size:48px;
     padding: 15px;
-}
-#branding a{
-    text-transform: none;
     font-size: 80px;
-    font-style: italic;
-    padding-right: 20px;
-    margin: 5px;
-    /* position: relative; */
+    position: relative;
     left: 17px;
 }
+
 h2{
     margin: 10px;
     font-size: 50px;
@@ -121,10 +121,11 @@ input[type="email"]{
 }
 /* SUBSCRIBE BUTTON */
 .newsletter button{
-    /* position: relative; */
+    font-family: "Conthrax";
+    
     top: 5px;
     width: 120px;
-    font-size: 28px;
+    font-size: 2rem;
     border-color: rgb(234, 0, 255);
     background-color: black;
     color:cyan;
@@ -182,21 +183,9 @@ top:200px;}
 
  /* RESPONSIVENESS: MEDIA QUERIES */
 
- /* IPHONE SE & XR, GOOGLE PIXEL 5 (1080px) */
-@media screen and (min-width: 320px) and (max-width: 359px){
-    body {background-color: green; }
-    .p1 {display:flex; font-size: 24px;}
-    .p2, .p3, .p4, .p5, .p6, .p7 {display:none;}
-    #branding  {
-        display:flex;
-        justify-content: center;
-        margin-top: 10px;
-    }
-    #branding a {
-        margin: 0;
-        padding: 0;
-        font-size: 5rem;
-    }
+ /* IPHONE SE & XR, GOOGLE PIXEL 5 (1080px) green */
+@media screen and (min-width: 320px) and (max-width: 374px){
+    body {background-color: green; width: 100%; }
     .header-container
     {
         display:flex;
@@ -204,26 +193,36 @@ top:200px;}
         margin: 0;
         padding: 0;  
         height: 150px;    
+        width: 100%;
     }
+    #branding  {
+        display:flex;
+        justify-content: center;
+        
+        
+    }
+    #branding a {
+        
+        top: 20px;
+        left: 0px;
+        margin: 0;
+        padding: 0;
+        font-size: 4rem;
+    }
+   
     .navbar {
         margin: 0;
         padding: 0;  
-        position: relative;
-        left: 5px;
     }
     .navbar a {
-        margin: 0;
         position: relative;
-        bottom: 27px;
+        left: 5px;
         font-size: 2rem;  
     }
     .landing-video {
         transform: translateX(-30%) translateY(-35%);
     }
-    .landing-overlay {
-        background:rgb(28, 235, 21);
-        mix-blend-mode: overlay;
-    }
+
     .landing-text h2 {
         margin: 0;
         padding: 0; 
@@ -234,10 +233,101 @@ top:200px;}
     .newsletter {
         display:flex;
         width: 100%;
+        margin: 0;
+        padding: 0;
     }
     .newsletter h3{
         font-size: 1.8rem;
         text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+    .newsletter button {
+        width: 100%;
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 300px;
+        height: 150px;
+        width: 100%;
+    }
+
+    .social-links li a i { 
+        
+        width: 50px;
+        height: 42px;
+        font-size: 1.8rem;
+        line-height: 0.4rem;  
+}
+}
+
+/* SAMSUNG GALAXY S20 (360px) blue;  */
+/* iPhone X (375 x 812)*/
+@media screen and (min-width: 375px) and (max-width: 480px) 
+{body {background-color: blue; width: 100%; }
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    #branding a {
+        position: relative;
+        left: 0;
+        top:10px;
+        margin: 0;
+        padding: 0;
+        font-size: 5rem; 
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 150px; 
+        width: 100%;   
+    }
+    .navbar {
+        margin: 0;
+        padding: 0;  
+        position: relative;
+        top: 8px;
+        left: -10px;
+        
+    }
+    .navbar a {
+        margin: 0;
+        position: relative;
+        bottom: 27px;
+        font-size: 2rem;  
+    }
+    .landing-video {
+        transform: translateX(-30%) translateY(-40%);
+    }
+    .landing-text h2 {
+        /* outline: auto; */
+        position: relative;
+        left: 13px;
+        top:30px;
+        margin: 0px;
+        padding: 0; 
+        font-size: 2.5rem;
+    }
+    .newsletter {
+        position: relative;
+        left: 0;
+        top: 50px;
+        width: 100%;
     }
     .newsletter button {
         width: 100%;
@@ -250,23 +340,115 @@ top:200px;}
     /* FOOTER */
     .footer-container {  
         position: relative;
-        top: 320px;
+        top: 225px;
         width: 100%;
+        height: 80px;
+        padding:0;
+        margin:0;
+        /* outline: auto red; */
+        align-items: center;
+    }
+    .social-links {
+        /* outline: auto; */
+        position: relative;
+        bottom: 5px;
     }
     .social-links li a i { 
         width: 50px;
-        height: 42px;
-        font-size: 1.8rem;
-        line-height: 0.4rem;  
+        height: 45px;
+        font-size: 2rem;
+        line-height: 0.1rem;  
 }
 }
 
-/* SAMSUNG GALAXY S20 (360px) */
-@media screen and (min-width: 360px) and (max-width: 480px) 
-{
-    body {background-color: blue; }
-    .p2 {display:flex; font-size: 24px;}
-    .p1, .p3, .p4, .p5, .p6, .p7 {display:none;}
+/* MOBILE DEVICES [481] purple */
+@media screen and (min-width: 481px) and (max-width: 575px){
+    body {background-color: purple;width: 100%; }
+    
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin-top: 10px;
+        width: 100%;
+    }
+    #branding a {
+        position: relative;
+        bottom: 20px;
+        margin: 0;
+        padding: 0;
+        font-size: 5rem;
+        
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 150px;    
+        width: 100%;
+    }
+    .navbar {
+        margin: 0;
+        padding: 0;  
+        position: relative;
+        bottom: 50px;
+        left: 25px;
+    }
+    .navbar a {
+        margin: 0;
+        position: relative;
+        bottom: 27px;
+        font-size: 2.5rem;  
+    }
+    .landing-video {
+        transform: translateX(-30%) translateY(-35%);
+    }
+
+    .landing-text h2 {
+        margin: 0;
+        padding: 0; 
+        font-size: 3rem;
+        text-align: center;
+        /* display:none; */
+    }
+    .newsletter {
+        display:flex;
+        width: 100%;
+    }
+    .newsletter h3{
+        font-size: 1.8rem;
+        text-align: center;
+    }
+    .newsletter button {
+        position: relative;
+        left:0px;
+        top:0;
+        width: 100%;
+        font-size: 2rem;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 190px;
+        left:0px;
+        width: 100%;
+    }
+    .social-links li a i { 
+        width: 70px;
+        height: 70px;
+        font-size: 2.8rem;
+        line-height: 1.6rem;  
+}
+}
+
+/* IPADS & TABLETS [576 < 767] brown */
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    body {background-color: brown; }
     #branding  {
         display:flex;
         justify-content: center;
@@ -341,26 +523,9 @@ top:200px;}
 }
 }
 
-/* MOBILE DEVICES [0 < 481] */
-@media screen and (min-width: 481px) and (max-width: 566px){
-    body {background-color: purple; }
-    .p3 {display:flex; font-size: 24px;}
-    .p1, .p2, .p4, .p5, .p6, .p7 {display:none;}
-
-}
-
-/* IPADS & TABLETS [481 < 768] */
-@media screen and (min-width: 576px) and (max-width: 767px) {
-    body {background-color: brown; }
-    .p4 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p5, .p6, .p7 {display:none;}
-}
-
-/* LAPTOPS - Smaller screens [769 < 991] */
+/* LAPTOPS - Smaller screens [769 < 991] red */
 @media screen and (min-width: 768px) and (max-width: 991px){
     body {background-color:  red; }
-    .p5 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p4, .p6, .p7 {display:none;}
     #branding  {
         display:flex;
         justify-content: center;
@@ -391,7 +556,7 @@ top:200px;}
         font-size: 3.8rem;  
     }
     .landing-video {
-        transform: translateX(-20%) translateY(-35%);
+        transform: translateX(-40%) translateY(-35%);
     }
 
     .landing-text h2 {
@@ -436,11 +601,9 @@ top:200px;}
         margin: 5px 15px;
     }
 }
-/* Dell XPS 13 (1080px) */
+/* Dell XPS 13 (1080px) orange */
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     body {background-color: orange; }
-    .p6 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p4, .p5, .p7 {display:none;}
     #branding  {
         display:flex;
         justify-content: center;
@@ -516,10 +679,3 @@ top:200px;}
         margin: 5px 15px;
     }
 }
-
-/* Desktops - Larger screens [1025 < 1200] */
-/* MacBook Pro (1440px) */
-/* @media screen and (min-width: 1200px) {
-    body {background-color: rgb(252, 26, 252); }
-    .p7 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p4, .p5, .p6 {display:none;}} */
