Responsiveness progress for all pages

--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -2,24 +2,30 @@
 
 /* Global */
 *{
-    font-family: 'Rajdhani', sans-serif;
-    color: rgb(255, 255, 255);
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding:0;
 }
 
+
+body {
+    background-color: rgb(87, 80, 80);
+    font-family: 'Rajdhani', sans-serif;
+    color: white;
+    width: 100%;
+}
 .header-container{
     display:flex;
     justify-content: space-between;
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 100px;
     background-color: black;
     border-bottom: cyan 3px solid;
 }
+
 .landing-video{ 
-    display:none;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -35,7 +41,6 @@
     background-position: center;
 }
 .landing-overlay {
-    display:none;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -52,34 +57,33 @@
     background: #03a9f4;
     mix-blend-mode: overlay;
 }
+
 /* ----------- NAV-BAR ----------- */
-.navbar a {
-    font-size: 3rem;
+
+.navbar {
+    width: 40%;
 }
+
 .navbar ul {
     display: flex;
+    justify-content: space-between;
     list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 20px;
-    margin-right: 40px;
-    /* outline: auto; */
-}
-header a{
-    color:#ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size:48px;
+    margin-right: 50px;
     padding: 15px;
 }
-#branding a{
-    text-transform: none;
-    font-size: 80px;
-    font-style: italic;
-    padding-right: 20px;
-    margin: 5px;
-    /* position: relative; */
-    left: 17px;
+.navbar a {
+    color:#ffffff;
+    font-size: 3.7rem;
+    text-transform: uppercase;
+    text-decoration: unset;
+}
+
+.logotype{
+    color:#ffffff;
+    text-decoration: unset;
+    font-size:5.5rem;
+    margin:10px;
+    padding-left: 20px;
 }
 h2{
     font-size: 50px;
@@ -175,21 +179,272 @@ input[type="email"]{
 }
 
 
-/* RESPONSIVENESS: MEDIA QUERIES */
+ /* RESPONSIVENESS: MEDIA QUERIES */
 
- /* IPHONE SE & XR, GOOGLE PIXEL 5 (1080px) */
-@media screen and (min-width: 320px) and (max-width: 359px){
-    body {background-color: green; }
-    .p1 {display:flex; font-size: 24px;}
-    .p2, .p3, .p4, .p5, .p6, .p7 {display:none;}
+ /* IPHONE SE & XR, GOOGLE PIXEL 5 (1080px) green */
+@media screen and (min-width: 320px) and (max-width: 374px){
+    body {background-color: green; width: 100%; }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 150px;    
+        width: 100%;
+    }
+    #branding  {
+        display:flex;
+        justify-content: center;
+    }
+    #branding a {
+        top: 20px;
+        left: 0px;
+        margin: 0;
+        padding: 0;
+        font-size: 4rem;
+    }
+   
+    .navbar {
+        margin: 0;
+        padding: 0;  
+    }
+    .navbar a {
+        position: relative;
+        left: 5px;
+        font-size: 2rem;  
+    }
+    .landing-video {
+        transform: translateX(-30%) translateY(-35%);
+    }
+
+    .landing-text h2 {
+        margin: 0;
+        padding: 0; 
+        font-size: 2rem;
+        text-align: center;
+        /* display:none; */
+    }
+    .newsletter {
+        display:flex;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .newsletter h3{
+        font-size: 1.8rem;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+    .newsletter button {
+        width: 100%;
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 300px;
+        height: 150px;
+        width: 100%;
+    }
+
+    .social-links li a i { 
+        
+        width: 50px;
+        height: 42px;
+        font-size: 1.8rem;
+        line-height: 0.4rem;  
+}
 }
 
-/* SAMSUNG GALAXY S20 (360px) */
-@media screen and (min-width: 360px) and (max-width: 480px) 
-{
-    body {background-color: blue; }
-    .p2 {display:flex; font-size: 24px;}
-    .p1, .p3, .p4, .p5, .p6, .p7 {display:none;}
+/* SAMSUNG GALAXY S20 (360px) blue;  */
+/* iPhone X (375 x 812)*/
+@media screen and (min-width: 375px) and (max-width: 480px) 
+{body {background-color: blue; width: 100%; }
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        
+    }
+    .logotype {
+        position: relative;
+        left: 0;
+        top:10px;
+        margin: 0;
+        padding: 0;
+        font-size: 5rem; 
+        /* outline: solid green 10px; */
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 150px; 
+        width: 100%;   
+    }
+    .navbar {
+        position: relative;
+        top: -20px;
+        width: 95%;
+        height: 100%;
+        margin: 10px;
+        padding: 0px;
+    }
+    .navbar a {
+        padding: 10px;
+        margin: 0;
+        font-size: 2rem;  
+    }
+    .landing-video {
+        transform: translateX(-30%) translateY(-40%);
+    }
+    .landing-text h2 {
+        position: relative;
+        left: 13px;
+        top:30px;
+        margin: 0px;
+        padding: 0; 
+        font-size: 2.5rem;
+    }
+
+     /* NEWSLETTER */
+    .newsletter {
+        position: relative;
+        left: 0;
+        top: 50px;
+        width: 100%;
+    }
+    .newsletter button {
+        width: 100%;
+        font-size: 1.5rem;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 180px;
+        width: 100%;
+        height: 80px;
+        padding:0;
+        margin:0;
+        align-items: center;
+    }
+    .social-links {
+        /* outline: auto; */
+        position: relative;
+        bottom: 5px;
+    }
+    .social-links li a i { 
+        width: 50px;
+        height: 45px;
+        font-size: 2rem;
+        line-height: 0.1rem;  
+}
+}
+
+/* MOBILE DEVICES [481] purple */
+@media screen and (min-width: 481px) and (max-width: 575px){
+    body {background-color: purple;width: 100%; }
+    
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin-top: 10px;
+        width: 100%;
+    }
+    #branding a {
+        position: relative;
+        bottom: 20px;
+        margin: 0;
+        padding: 0;
+        font-size: 5rem;
+        
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 150px;    
+        width: 100%;
+    }
+    .navbar {
+        margin: 0;
+        padding: 0;  
+        position: relative;
+        bottom: 50px;
+        left: 25px;
+    }
+    .navbar a {
+        margin: 0;
+        position: relative;
+        bottom: 27px;
+        font-size: 2.5rem;  
+    }
+    .landing-video {
+        transform: translateX(-30%) translateY(-35%);
+    }
+
+    .landing-text h2 {
+        margin: 0;
+        padding: 0; 
+        font-size: 3rem;
+        text-align: center;
+        /* display:none; */
+    }
+    .newsletter {
+        display:flex;
+        width: 100%;
+    }
+    .newsletter h3{
+        font-size: 1.8rem;
+        text-align: center;
+    }
+    .newsletter button {
+        position: relative;
+        left:0px;
+        top:0;
+        width: 100%;
+        font-size: 2rem;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 190px;
+        left:0px;
+        width: 100%;
+    }
+    .social-links li a i { 
+        width: 70px;
+        height: 70px;
+        font-size: 2.8rem;
+        line-height: 1.6rem;  
+}
+}
+
+/* IPADS & TABLETS [576 < 767] brown */
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    body {background-color: brown; }
     #branding  {
         display:flex;
         justify-content: center;
@@ -206,32 +461,25 @@ input[type="email"]{
         flex-direction: column;
         margin: 0;
         padding: 0;  
-        height: 150px;
-        
+        height: 150px;    
     }
     .navbar {
         margin: 0;
         padding: 0;  
         position: relative;
-        left: 5px;
-        
+        left: 150px;
     }
     .navbar a {
         margin: 0;
         position: relative;
         bottom: 27px;
-        font-size: 2rem;
-        
+        font-size: 2rem;  
+        text-transform: uppercase;
     }
     .landing-video {
         transform: translateX(-30%) translateY(-35%);
-    
-        
     }
-    .landing-overlay {
-        background:rgb(44, 240, 240);
-        mix-blend-mode: color-burn;
-    }
+
     .landing-text h2 {
         margin: 0;
         padding: 0; 
@@ -269,31 +517,159 @@ input[type="email"]{
 }
 }
 
-/* MOBILE DEVICES [0 < 481] */
-@media screen and (min-width: 481px) and (max-width: 566px){
-    body {background-color: purple; }
-    .p3 {display:flex; font-size: 24px;}
-    .p1, .p2, .p4, .p5, .p6, .p7 {display:none;}
-
-}
-
-/* IPADS & TABLETS [481 < 768] */
-@media screen and (min-width: 576px) and (max-width: 767px) {
-    body {background-color: brown; }
-    .p4 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p5, .p6, .p7 {display:none;}
-}
-
-/* LAPTOPS - Smaller screens [769 < 991] */
+/* LAPTOPS - Smaller screens [769 < 991] red */
 @media screen and (min-width: 768px) and (max-width: 991px){
     body {background-color:  red; }
-    .p5 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p4, .p6, .p7 {display:none;}
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+    #branding a {
+        margin: 0;
+        padding: 0;
+        font-size: 5rem;
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 200px;    
+    }
+    .navbar {
+        margin: 0;
+        padding: 0;  
+    }
+    .navbar a {
+        margin: 0;
+        position: relative;
+        left: 80px;
+        bottom: 27px;
+        font-size: 3.8rem;  
+    }
+    .landing-video {
+        transform: translateX(-40%) translateY(-35%);
+    }
+
+    .landing-text h2 {
+        margin: 0;
+        padding: 0; 
+        font-size: 4rem;
+        text-align: center;
+    }
+    .newsletter {
+        display:flex;
+        width: 100%;
+    }
+    .newsletter h3{
+        font-size: 3.5rem;
+        text-align: center;
+    }
+    .newsletter button {
+        width: 100%;
+        font-size: 3rem;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 280px;
+        width: 100%;
+    }
+    .social-links li a i { 
+        border-style:solid;
+        border-width: 3px;
+        border-color: cyan;
+        width: 100px;
+        height: 100px;
+        margin: 10px 5px;
+        font-size: 4rem;
+        line-height: 2.7rem;  
+    }
+    .list-item {
+        margin: 5px 15px;
+    }
 }
-/* Dell XPS 13 (1080px) */
+/* Dell XPS 13 (1080px) orange */
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     body {background-color: orange; }
-    .p6 {display:flex; font-size: 24px;}
-    .p1, .p2, .p3, .p4, .p5, .p7 {display:none;}
-}
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+    #branding a {
+        margin: 0;
+        padding: 0;
+        font-size: 6rem;
+    }
+    .header-container
+    {
+        display:flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;  
+        height: 200px;    
+    }
+    .navbar {
+        margin: 0;
+        padding: 0;  
+    }
+    .navbar a {
+        margin: 0;
+        position: relative;
+        left: 250px;
+        bottom: 30px;
+        font-size: 3.5rem;  
+    }
+    .landing-video {
+        transform: translateX(-50%) translateY(-25%);
+    }
 
+    .landing-text h2 {
+        margin: 0;
+        padding: 0; 
+        font-size: 4rem;
+        text-align: center;
+    }
+    .newsletter {
+        display:flex;
+        width: 100%;
+    }
+    .newsletter h3{
+        font-size: 3.5rem;
+        text-align: center;
+    }
+    .newsletter button {
+        width: 100%;
+        font-size: 3rem;
+    }
+    #validateEmail {
+        width: 100%;
+        text-align: center;
+    }
+    /* FOOTER */
+    .footer-container {  
+        position: relative;
+        top: 280px;
+        width: 100%;
+    }
+    .social-links li a i { 
+        border-style:solid;
+        border-width: 3px;
+        border-color: cyan;
+        width: 100px;
+        height: 100px;
+        margin: 10px 5px;
+        font-size: 4rem;
+        line-height: 2.7rem;  
+    }
+    .list-item {
+        margin: 5px 15px;
+    }
+}
