--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@
     margin: 0;
     padding:0;
 }
-body, html {
-    /* overflow-x:hidden; */
-}
+
+
 body {
     background-color: rgb(87, 80, 80);
     font-family: 'Rajdhani', sans-serif;
@@ -21,6 +20,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 100px;
     background-color: black;
     border-bottom: cyan 3px solid;
 }
@@ -59,35 +59,39 @@ body {
 }
 
 /* ----------- NAV-BAR ----------- */
-.navbar a {
-    font-size: 3rem;
-}
-.navbar ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 20px;
-    
-    /* outline: auto; */
-}
-header a{
-    color:#ffffff;
-    text-decoration: none;
-    font-size:48px;
-    padding: 15px;
-    font-size: 80px;
-    position: relative;
-    left: 17px;
+
+.navbar {
+    width: 40%;
 }
 
+.navbar ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-right: 50px;
+    padding: 15px;
+}
+.navbar a {
+    color:#ffffff;
+    font-size: 3.7rem;
+    text-transform: uppercase;
+    text-decoration: unset;
+}
+
+.logotype{
+    color:#ffffff;
+    text-decoration: unset;
+    font-size:5.5rem;
+    margin:10px;
+    padding-left: 20px;
+}
 h2{
     margin: 10px;
-    font-size: 50px;
+    font-size: 4rem;
 }
 h3{
     color: rgb(5, 255, 234);
-    font-size: 32px;
+    font-size: 2rem;
 }
 .landing-text {
     margin: 20px;
@@ -111,18 +115,24 @@ input[type="email"]{
     color:black;
 }
 .newsletter{
-    /* position: relative; */
-    left: 30px;
-    display:flex;
-    flex-direction: column;
-    width: 30vw;
+    text-align: center;
+    position: relative;
+    left: 40px;
+    top: -20px;
+    width: 25%;
+}
+
+#validateEmail {
+    text-align: center;
+    width: 100%;
+    outline: auto;
+    font-size: 1.5rem;
 }
 /* SUBSCRIBE BUTTON */
 .newsletter button{
     font-family: "Conthrax";
-    
+    width: 100%;
     top: 5px;
-    width: 120px;
     font-size: 2rem;
     border-color: rgb(234, 0, 255);
     background-color: black;
@@ -134,7 +144,7 @@ input[type="email"]{
     display: flex;
     justify-content: space-evenly;
     outline: solid 2px cyan;
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: black;
@@ -196,11 +206,8 @@ top:200px;}
     #branding  {
         display:flex;
         justify-content: center;
-        
-        
     }
     #branding a {
-        
         top: 20px;
         left: 0px;
         margin: 0;
@@ -277,14 +284,16 @@ top:200px;}
         margin: 0;
         padding: 0;
         width: 100%;
+        
     }
-    #branding a {
+    .logotype {
         position: relative;
         left: 0;
         top:10px;
         margin: 0;
         padding: 0;
         font-size: 5rem; 
+        /* outline: solid green 10px; */
     }
     .header-container
     {
@@ -296,24 +305,22 @@ top:200px;}
         width: 100%;   
     }
     .navbar {
-        margin: 0;
-        padding: 0;  
         position: relative;
-        top: 8px;
-        left: -10px;
-        
+        top: -20px;
+        width: 95%;
+        height: 100%;
+        margin: 10px;
+        padding: 0px;
     }
     .navbar a {
+        padding: 10px;
         margin: 0;
-        position: relative;
-        bottom: 27px;
         font-size: 2rem;  
     }
     .landing-video {
         transform: translateX(-30%) translateY(-40%);
     }
     .landing-text h2 {
-        /* outline: auto; */
         position: relative;
         left: 13px;
         top:30px;
@@ -321,6 +328,8 @@ top:200px;}
         padding: 0; 
         font-size: 2.5rem;
     }
+
+     /* NEWSLETTER */
     .newsletter {
         position: relative;
         left: 0;
@@ -338,12 +347,11 @@ top:200px;}
     /* FOOTER */
     .footer-container {  
         position: relative;
-        top: 225px;
+        top: 180px;
         width: 100%;
         height: 80px;
         padding:0;
         margin:0;
-        /* outline: auto red; */
         align-items: center;
     }
     .social-links {
@@ -469,13 +477,14 @@ top:200px;}
         margin: 0;
         padding: 0;  
         position: relative;
-        left: 5px;
+        left: 150px;
     }
     .navbar a {
         margin: 0;
         position: relative;
         bottom: 27px;
         font-size: 2rem;  
+        text-transform: uppercase;
     }
     .landing-video {
         transform: translateX(-30%) translateY(-35%);
@@ -624,12 +633,12 @@ top:200px;}
     .navbar a {
         margin: 0;
         position: relative;
-        left: 150px;
-        bottom: 40px;
-        font-size: 4.5rem;  
+        left: 250px;
+        bottom: 30px;
+        font-size: 3.5rem;  
     }
     .landing-video {
-        transform: translateX(-50%) translateY(-20%);
+        transform: translateX(-50%) translateY(-25%);
     }
 
     .landing-text h2 {
