--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,19 @@ h3{
     left: 50px;
     padding-top: 0;
 }
-header .highlight, header .current a
+.navbar .highlight, 
+.navbar .current a
 {
  color:e8491d;
  font-weight:bold;
 }
- header a:hover{
+ .navbar a:hover{
  color:#05f7ff;
  font-weight:bold;
+}
+ .logotype:hover{
+ color:#05f7ff;
+ 
 }
 /* NEWSLETTER */
 input[type="email"]{
@@ -129,7 +134,7 @@ input[type="email"]{
     font-size: 1.5rem;
 }
 /* SUBSCRIBE BUTTON */
-.newsletter button{
+.form-button{
     font-family: "Conthrax";
     width: 100%;
     top: 5px;
@@ -138,7 +143,11 @@ input[type="email"]{
     background-color: black;
     color:cyan;
 }
+.form-button:hover{
+ background-color:#05f7ff;
+ color: black;
 
+}
 /* -------------- FOOTER -------------- */
 .footer-container {
     display: flex;
@@ -207,7 +216,7 @@ top:200px;}
         display:flex;
         justify-content: center;
     }
-    #branding a {
+    .logotype {
         top: 20px;
         left: 0px;
         margin: 0;
@@ -278,13 +287,20 @@ top:200px;}
 /* iPhone X (375 x 812)*/
 @media screen and (min-width: 375px) and (max-width: 480px) 
 {body {background-color: blue; width: 100%; }
+    .header-container {
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;  
+    height: 150px; 
+    width: 100%;   
+    }
     #branding  {
         display:flex;
         justify-content: center;
         margin: 0;
         padding: 0;
         width: 100%;
-        
     }
     .logotype {
         position: relative;
@@ -295,15 +311,7 @@ top:200px;}
         font-size: 5rem; 
         /* outline: solid green 10px; */
     }
-    .header-container
-    {
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;  
-        height: 150px; 
-        width: 100%;   
-    }
+ 
     .navbar {
         position: relative;
         top: -20px;
@@ -527,19 +535,9 @@ top:200px;}
 }
 }
 
-/* LAPTOPS - Smaller screens [769 < 991] red */
+/* IPADS & LAPTOPS - Smaller screens [769 < 991] red */
 @media screen and (min-width: 768px) and (max-width: 991px){
     body {background-color:  red; }
-    #branding  {
-        display:flex;
-        justify-content: center;
-        margin-top: 10px;
-    }
-    #branding a {
-        margin: 0;
-        padding: 0;
-        font-size: 5rem;
-    }
     .header-container
     {
         display:flex;
@@ -548,6 +546,17 @@ top:200px;}
         padding: 0;  
         height: 200px;    
     }
+    #branding  {
+        display:flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+    .logotype {
+        margin: 0;
+        padding: 0;
+        font-size: 5rem;
+    }
+
     .navbar {
         margin: 0;
         padding: 0;  
