--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
     color: white;
     width: 100%;
     overflow-x:hidden;
-    
 }
 .header-container{
     display:flex;
@@ -22,7 +21,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 150px;
+    height: 200px;
     background-color:rgb(7, 7, 7, 0.4);
     border-bottom: 2px solid;
         border-image: linear-gradient(
@@ -32,7 +31,14 @@ body {
         #FF00FF 70%
         ) 1 2 10%;
 }
-
+.logotype{
+    color:#ffffff;
+    text-decoration: unset;
+    font-size: 11rem;
+    margin: 10px;
+    padding-left: 20px;
+    font-family: "Conthrax";
+}
 .landing-video{ 
     margin: 0;
     padding: 0;
@@ -62,50 +68,49 @@ body {
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
     background-position: center;
-    background: #03a9f4;
+    background: #524399;
     mix-blend-mode: overlay;
 }
 
 /* ----------- NAV-BAR ----------- */
 
 .navbar {
-   
-    width: 50%;
+    /* outline: auto; */
+    width: 45%;
     position: relative;
-    top: 20px;
+    top: px;
+    left: -100px;
 }
 
 .navbar ul {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    margin-right: 50px;
+    margin: 0;
     padding: 15px;
 }
 .navbar a {
     color:#ffffff;
-    font-size: 5.4rem;
+    font-size: 10rem;
     text-transform: uppercase;
     text-decoration: unset;
+   
 }
 
-.logotype{
-    color:#ffffff;
-    text-decoration: unset;
-    font-size:7.8rem;
-    margin:10px;
-    padding-left: 20px;
-}
-h2{
+
+.landing-text h2{
     margin: 10px;
-    font-size: 5rem;
+    font-size: 10rem;
+    
 }
 .landing-text {
-    margin: 20px;
+    margin: 40px;
     top: 50px;
     left: 50px;
     padding-top: 0;
 }
+
+
 .navbar .highlight, 
 .navbar .current a
 {
@@ -124,25 +129,14 @@ h2{
 .newsletter{
     text-align: center;
     position: relative;
-    left: 480px;
-    top: 180px;
-    width: 50%;
-    border-right: 10px solid ;
-    border-top: 5px solid ;
-    
-        border-left: 10px solid ;
-        border-image:linear-gradient(
-            to top,
-            
-            rgba(8, 255, 255, 0.8),
-            rgba(255, 25, 224, 0.9),
-            rgba(255, 25, 224, 0.1)
-          ) 1 2 20%;
+    left: 1100px;
+    top: 100px;
+    width: 40%;
 }
 
 .newsletter h3 {
     color: rgb(5, 255, 234);
-    font-size: 3rem;
+    font-size: 4rem;
     background-color: rgba(0, 0, 0, 0.9);
 }
 
@@ -150,6 +144,7 @@ input[type="email"]{
     width: 250px;
     padding:10px;
     outline: unset;
+    
 }
 
 #validateEmail {
@@ -159,7 +154,7 @@ input[type="email"]{
     font-size: 2.7rem;
     margin: 0;
     padding: 10px;
-    background-color: black;
+    background-color: none;
     color:white;
     outline: unset;
 
@@ -169,7 +164,7 @@ input[type="email"]{
     font-family: "Conthrax";
     width: 100%;
     top: 5px;
-    font-size: 3rem;
+    font-size: 5rem;
     background-color: black;
     color:cyan;
     border-top: 10px solid ;
@@ -195,6 +190,7 @@ input[type="email"]{
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+    height: 200px;
     background-color: rgba(0, 0, 0, 0.9) ;
     border-top: 2px solid;
     border-image: linear-gradient(
@@ -218,12 +214,12 @@ input[type="email"]{
 }
 .social-links li a i {
     margin: 0 30px;
-    width: 80px;
-    height: 80px;
+    width: 160px;
+    height: 160px;
     padding: 24px 0;
     border-radius: 50%;
-    font-size: 4rem;
-    line-height: 2rem;
+    font-size: 7.5rem;
+    line-height: 7rem;
     text-align: center;
     color: white;
     background-color: rgb(35, 0, 236);
