--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,9 +145,6 @@ body {
     justify-content: start;
     flex-direction: row;
     gap: 6em;
-    z-index: 300;
-    /* outline: 5px solid red; */
-    /* background-color: black; */
     position: absolute;
     top: 7em;
     left: 7em;
@@ -183,7 +180,9 @@ body {
 .blog-post img {
     border-radius: 10% 10%;
     width: 100%;
-    max-height: 9em;
+    min-height: 7em;
+    max-height: 7em;
+    
 }
 .blog-post h2 {
     margin: 0.3em 0;
@@ -211,8 +210,8 @@ body {
 /* -------------- NEWSLETTER -------------- */
 .newsletter-container {
     position: absolute;
-    top: 26em;
-    left:27.5em;
+    top: 27em;
+    left:30.3em;
     padding: 0.5em;
     display:flex;
     align-items: center;
@@ -281,11 +280,10 @@ input[type="email"]{
     margin: 0;
     padding:0;
     position: absolute;
-    left: 45.2em;
-    bottom: 0em;
+    left: 48em;
+    bottom: 0.2em;
     display: flex;
     justify-content: space-evenly;
-    /* outline: red 5px solid; */
 }
 
 #footer-details {
