--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ body {
     background: #524399;
     mix-blend-mode: overlay;
 }
+/* -------------- LANDING IMAGE -------------- */ 
 .landing-image-container{
     height: 36em;
     width: 100%;
@@ -78,7 +79,7 @@ body {
     width: 100%;
     height: 33em;
 }
-
+/* -------------- LANDING TEXT -------------- */ 
 .landing-text {
     margin: 0;
     padding: 3em 2em;
@@ -88,9 +89,7 @@ body {
 .landing-text h2 {
     font-size: clamp(5rem, 1vw + 1rem, 5rem);
 }
-
 /* ----------- NAV-BAR ----------- */
-
 .navbar {
     display: flex;
     justify-content: end;
@@ -126,7 +125,6 @@ body {
  .logotype:hover{
  color:#05f7ff;
 }
-
 .form-button:hover{
  background-color:#05f7ff;
  color: black;
@@ -1594,11 +1592,3 @@ input[type="email"]{
 
 /* 1200px = 75em */
 /* @media screen and (min-width: 75em) and (max-width: 80em)  */
-
-/* Main Desktop is 1920w and 1080h */
-
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-  /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-   /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-    /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-     /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
