--- a/assets/css/style_about.css
+++ b/assets/css/style_about.css
@@ -42,7 +42,6 @@ body {
     margin: 0.5em;
     font-family: "Conthrax";
 }
-
 /* -------------- LANDING VIDEO -------------- */ 
 .landing-video,
 .landing-overlay { 
@@ -64,6 +63,7 @@ body {
     background: #524399;
     mix-blend-mode: overlay;
 }
+/* -------------- LANDING IMAGE -------------- */ 
 .landing-image-container{
     height: 36em;
     width: 100%;
@@ -79,7 +79,7 @@ body {
     width: 100%;
     height: 33em;
 }
-
+/* -------------- LANDING TEXT -------------- */ 
 .landing-text {
     margin: 0;
     padding: 3em 2em;
@@ -89,9 +89,7 @@ body {
 .landing-text h2 {
     font-size: clamp(5rem, 1vw + 1rem, 5rem);
 }
-
 /* ----------- NAV-BAR ----------- */
-
 .navbar {
     display: flex;
     justify-content: end;
@@ -127,7 +125,6 @@ body {
  .logotype:hover{
  color:#05f7ff;
 }
-
 .form-button:hover{
  background-color:#05f7ff;
  color: black;
@@ -1122,11 +1119,3 @@ color: black;
 
 /* 1200px = 75em */
 /* @media screen and (min-width: 75em) and (max-width: 120em)  */
-
-/* Main Desktop is 1920w and 1080h */
-
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
