--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -145,7 +145,7 @@ body {
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-#contact-us-text {
+#contact-form-text {
     text-align: center;
     width: 100%;
     height: 3em;
@@ -162,7 +162,7 @@ input[type="email"]{
     padding:1em;
     outline: unset;
 }
-#validateEmail {
+#contact-form-email {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -349,7 +349,7 @@ input[type="email"]{
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-#contact-us-text {
+#contact-form-text {
     text-align: center;
     width: 100%;
     height: 3em;
@@ -366,7 +366,7 @@ input[type="email"]{
     padding:1em;
     outline: unset;
 }
-#validateEmail {
+#contact-form-email {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -533,7 +533,7 @@ input[type="email"]{
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-#contact-us-text {
+#contact-form-text {
     text-align: center;
     width: 100%;
     height: 3em;
@@ -550,7 +550,7 @@ input[type="email"]{
     padding:1em;
     outline: unset;
 }
-#validateEmail {
+#contact-form-email {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -717,7 +717,7 @@ input[type="email"]{
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-#contact-us-text {
+#contact-form-text {
     text-align: center;
     width: 100%;
     height: 3em;
@@ -734,7 +734,7 @@ input[type="email"]{
     padding:1em;
     outline: unset;
 }
-#validateEmail {
+#contact-form-email {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -901,7 +901,7 @@ input[type="email"]{
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-#contact-us-text {
+#contact-form-text {
     text-align: center;
     width: 100%;
     height: 3em;
@@ -918,7 +918,7 @@ input[type="email"]{
     padding:1em;
     outline: unset;
 }
-#validateEmail {
+#contact-form-email {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -1085,7 +1085,7 @@ input[type="email"]{
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
 }
-#contact-us-text {
+#contact-form-text {
     text-align: center;
     width: 100%;
     height: 3em;
@@ -1102,7 +1102,7 @@ input[type="email"]{
     padding:1em;
     outline: unset;
 }
-#validateEmail {
+#contact-form-email {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -1167,10 +1167,3 @@ input[type="email"]{
 /* 1200px = 75em */
 /* @media screen and (min-width: 75em) and (max-width: 80em)  */
 
-/* Main Desktop is 1920w and 1080h */
-
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-  /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-   /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-    /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-     /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
